PROJECT(examples)

CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -DKUNGFU_PERFORMANCE_TEST")
SET(CMAKE_CXX_FLAGS_DEBUG  "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)

# For Linux
SET(KFC_INSTALL_RPATH "$ORIGIN" "$ORIGIN/../../")
SET(CMAKE_INSTALL_RPATH "${KFC_INSTALL_RPATH}")

IF (KF_SDK_HOME)
    MESSAGE("KF_SDK_HOME is set to ${KF_SDK_HOME}")
ELSE(KF_SDK_HOME)
    SET(KF_SDK_HOME "~/.local/kungfu")
    MESSAGE("KF_SDK_HOME is unset. Fallback to ${KF_SDK_HOME}")
ENDIF(KF_SDK_HOME)

INCLUDE_DIRECTORIES("${KF_SDK_HOME}/include")
LINK_DIRECTORIES("${KF_SDK_HOME}/lib")

ADD_EXECUTABLE(yijinjing-demo
    src/main.cpp
    src/server.cpp
    src/mimiclocator.cpp
    src/consoleprintpublisher.cpp)

TARGET_LINK_LIBRARIES(yijinjing-demo yijinjing fmt SQLiteCpp)
